<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/common_dimen_47dip"
    android:layout_marginTop="@dimen/common_dimen_12dip">

    <LinearLayout
        android:id="@+id/ll_clear_pwd_layout"
        android:layout_width="@dimen/common_dimen_28dip"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/iv_clear_pass_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/common_dimen_20dip"
            android:contentDescription="@string/pass_word_clear"
            android:src="@mipmap/ic_edittext_clear" />
    </LinearLayout>

    <EditText
        android:id="@+id/ed_user_pwd"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/common_dimen_48dip"
        android:layout_marginLeft="@dimen/common_dimen_28dip"
        android:layout_toLeftOf="@+id/ll_clear_pwd_layout"
        android:background="@null"
        android:drawableLeft="@mipmap/ic_login_password_default"
        android:drawablePadding="@dimen/common_dimen_20dip"
        android:gravity="center_vertical"
        android:hint="@string/please_input_your_password"
        android:imeActionLabel="@string/login_text"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/btn_login"
        android:paddingLeft="@dimen/common_dimen_8dip"
        android:paddingRight="@dimen/common_dimen_0dip"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:textSize="@dimen/common_dimen_14sp" />

    <View
        android:id="@+id/v_pass_word_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_dimen_1dip"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/common_dimen_28dip"
        android:layout_toLeftOf="@+id/ll_clear_pwd_layout"
        android:background="@color/theme_color_secondary" />

</RelativeLayout>